Fix menu page layout issue on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
   background-color: #F3F6EA; }
 
 .l-container {
-  padding: 3rem;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -302,7 +301,8 @@ header {
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding-bottom: 1.5rem; }
+  padding-bottom: 1.5rem;
+  padding-top: 1rem; }
   .c-menu__links button {
     background: none;
     border: 2px solid #2F4858;
@@ -336,6 +336,7 @@ header {
 
 .c-menu__section-main {
   max-width: 100rem;
+  width: 90vw;
   border: 3px solid #2F4858;
   margin-bottom: 3rem;
   background-color: #fcf5cc; }
@@ -352,7 +353,9 @@ header {
   color: #2F4858;
   margin: 0 auto;
   margin-bottom: 3rem;
-  width: 40rem;
+  max-width: 40rem;
+  min-width: 25rem;
+  padding: 1rem;
   text-align: center; }
   .c-menu__item p {
     font-size: 1.6rem;
@@ -428,7 +431,9 @@ header {
     background-size: cover; }
   .c-menu__menu-section {
     display: flex;
-    flex-wrap: wrap; } }
+    flex-wrap: wrap; }
+  .c-menu__item {
+    width: 40rem; } }
 
 @media only screen and (min-width: 1200px) {
   .c-menu__links {
