--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -1,5 +1,5 @@
 .l-container {
-  padding: 3rem;
+  // padding: 3rem;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
